--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Tasks</h1>
+<div id="app">
+  <h1>Tasks</h1>
+  <ul>
+    <li v-for="task in tasks">
+      {{ task }}
+    </li>
+  </ul>
+</div>
