--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,9 @@
 <div id="app">
+  <h1>Add new task</h1>
+  <div>
+    <input type="text" v-model="newTaskText">
+    <button v-on:click="addTask()">Add task</button>
+  </div>
   <h1>Tasks</h1>
   <ul>
     <li v-for="task in tasks">
