--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <h1>Tasks</h1>
   <ul>
-    <li v-for="task in tasks">
+    <li v-for="task in tasks" v-on:click="toggleComplete(task)" v-bind:class="{finished: task.completed}">
       {{ task.text }}
     </li>
   </ul>
