Add button to remove completed tasks

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,4 +12,7 @@
       {{ task.text }}
     </li>
   </ul>
+  <div>
+    <button v-on:click="removeCompletedTasks()">Clear completed tasks</button>
+  </div>
 </div>
